syntax = "proto3";

package protobufInternal;

option go_package = "PS_projekt/api/grpc/protobufInternal;protobufInt";

import "google/protobuf/empty.proto";
import "api/grpc/protobufRazpravljalnica/protobuf.proto";
//import "google/protobuf/timestamp.proto";
///////////////////////////////////////////////////////
//Chain node types 
///////////////////////////////////////////////////////
//
message NodeData{
  int64 id = 1 ;
  string address = 2 ; 
}
service ChainNode{

  rpc Read(ReadRequest) returns (ReadResponse);
  //rpc TransferData(stream Data) returns 
}

///////////////////////////////////////////////////////
//MasterNode
///////////////////////////////////////////////////////
service MasterNode{
  rpc SignalAlive(SignalAliveRequest)returns (SignalAliveResponse);
  rpc ReadFromNodes(ReadRequest) returns (ReadResponse);
  rpc GetClusterState(google.protobuf.Empty)returns(GetClusterStateResponse);
  rpc GenerateRandomNode(google.protobuf.Empty)returns(GenerateRandomNodeResponse);
  rpc SignalNewTail(NewTailRequest) returns (NewTailResponse); 
}
message SignalAliveRequest {
  int64 nodeId = 1 ; 
  string nodeUrl = 2 ;
}

message SignalAliveResponse {
  string masterUrl = 1 ; 
}

message GetClusterStateResponse{
  NodeData head = 1 ; 
  NodeData tail = 2 ; 
}

message GenerateRandomNodeResponse{
  NodeData node = 1 ; 
}

message NewTailRequest{
  int64 id = 1 ; 
  string url = 2 ;
}

message NewTailResponse{
  bool succ = 1 ;
}








message ForwardRequest{
    int64 id = 1; 
   int64 version = 2;
}

message UpdateRequest{
  int64 id = 1; 
   int64 data =2 ; 
}

/////////////////////////////////////////////////
//CRAQ implementation 
/////////////////////////////////////////////////
//

message ReadRequest {
  int64 id = 1 ;
}

message ReadResponse{
  bool ok = 1 ; 
  int64 data = 2 ;
}



message Data {
  repeated razpravljalnica.User users  =1 ; 
  repeated razpravljalnica.Message messages =2 ; 
  repeated razpravljalnica.Topic topics = 3 ; 
  repeated razpravljalnica.Like likes  = 4 ; 

}
